[project]
name = "sam3-ros"
version = "0.1.0"
description = "ROS 2 Wrapper for SAM 3"
readme = "README.md"
authors = [
    { name = "mitukou1109", email = "mitukou1109@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "decord>=0.6.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.3.4",
    "opencv-python>=4.11.0.86",
    "psutil>=7.2.1",
    "pycocotools>=2.0.11",
    "sam3",
    "setuptools<81",
]

[project.scripts]
segmentation_node = "sam3_ros.segmentation:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
sam3 = { git = "https://github.com/facebookresearch/sam3.git" }
